@@ -26,8 +26,6 @@ class MainWdgt(QtGui.QMainWindow, Ui_MainWdgt, MainWidget):
         self.progress_bar = None
         self.progress_bar_update_interval = 1
         self.progress_bar_last_shown_value = 0
-        # A fast moving progress bar seems to cause crashes on Windows.
-        self.show_numeric_progress_bar = (sys.platform != "win32")
 
     def _store_state(self):
         self.config()["main_window_state"] = self.saveGeometry()
@@ -91,21 +89,15 @@ class MainWdgt(QtGui.QMainWindow, Ui_MainWdgt, MainWidget):
         self.progress_bar.show()
 
     def set_progress_range(self, minimum, maximum):
-        if not self.show_numeric_progress_bar:
-            return
         self.progress_bar.setRange(minimum, maximum)
         
     def set_progress_update_interval(self, update_interval):
-        if not self.show_numeric_progress_bar:
-            return
         update_interval = int(update_interval)
         if update_interval == 0:
             update_interval = 1
         self.progress_bar_update_interval = update_interval
         
     def set_progress_value(self, value):
-        if not self.show_numeric_progress_bar:
-            return
         # There is a possibility that 'value' does not visit all intermediate
         # integer values in the range, so we need to check and store the last
         # shown value here.
