@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>315</width>
-    <height>373</height>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle">
