@@ -1,9 +1,15 @@
+-self.render_chain("default").filter(Uppercase)
+-fix OSX related problem on new installs
+-more work on progress bar during import. Hopefully finally fixed now, but
+ feedback welcome.
+	
 -the size of question and answer boxes no longer is always equal, but boxes 
- which contain images can take up more space (requested by Dan Schmidt)
+ which contain images can take up more space. Could need some more tweaking,
+ so feedback welcome. (requested by Dan Schmidt)
 -fix searching for words containing an apostrophe
 -fix crash in changing card type from card browser (reported by Twenty Ten)
 -add card counts above bars in 'grades' statistics (requested by abacus)
-
+-tweaks to the plugin API
 -patches from Tim to work around quirks in import logs caused by Mnemododo.
 
 MNEMOSYNE 2.0
